# ctraderOpenAPI

./: .gitignore  CMakeLists.txt
include/: Buffer.h  MessageHandler.h  NetworkMessage.h  NetworkWrapper.h  OpenApi.h  OpenApiMessagesFactory.h
src/: NetworkWrapper.cpp  OpenApi.cpp  OpenApiMessagesFactory.cpp  credentials.h  main.cc  main.cpp
